# get_weather

./: .gitmodules  CMakeLists.txt  LICENSE
src/: AppOptions.cpp  AppOptions.h  CMakeLists.txt  Cache.h  CacheStorage.h  ChronoUtils.cpp  ChronoUtils.h  CmdParser.cpp  CmdParser.h  Comparer.h  Connection.h  DistanceComparer.cpp  DistanceComparer.h  Factory.cpp  Factory.h  FileCacheStorage.cpp  FileCacheStorage.h  GeoCalculator.cpp  GeoCalculator.h  GeoCoordinates.cpp  GeoCoordinates.h  HttpRequestConnection.cpp  HttpRequestConnection.h  Main.cpp  MathUtils.cpp  MathUtils.h  Observer.cpp  Observer.h  OpenWeather.cpp  OpenWeather.h  Printable.h  Printer.cpp  Printer.h  Serializable.h  StringUtils.cpp  StringUtils.h  TimeCache.cpp  TimeCache.h  Weather.cpp  Weather.h  (+4 more)
test/: CMakeLists.txt  CacheMock.h  ChronoUtilsMock.h  CmdParserTest.cpp  ComparerMock.h  ConnectionMock.h  DistanceComparerTest.cpp  GeoCalculatorMock.h  GeoCalculatorTest.cpp  Main.cpp  OpenWeatherTest.cpp  TimeCacheTest.cpp  WeatherGetterMock.h  WorkerTest.cpp  pch.h
